
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






struct in_addr {int dummy; } ;
struct sockaddr_in {struct in_addr sin_addr; int sin_port; int sin_family; } ;
struct sockaddr {int dummy; } ;
struct hostent {scalar_t__ h_addr; } ;
typedef int remote_addr ;
typedef int in ;


 int AF_INET ;
 int SOCK_STREAM ;
 int bzero (char**,int) ;
 int connect (int,struct sockaddr*,int) ;
 int exit (int) ;
 struct hostent* gethostbyname (char*) ;
 int htons (unsigned short) ;
 int memset (struct sockaddr_in*,int,int) ;
 int printf (char*,...) ;
 scalar_t__ read (int,char*,int) ;
 int socket (int ,int ,int ) ;

int
connect_to_remote_host ( char* tip, unsigned short tport )
{
 int s;
 char in[1024];
 struct sockaddr_in remote_addr;
 struct hostent* host_addr;

 memset ( &remote_addr, 0x0, sizeof ( remote_addr ) );
 if ( ( host_addr = gethostbyname ( tip ) ) == ((void*)0) )
 {
  printf ( "cannot resolve \"%s\"\n", tip );
  exit ( 1 );
 }
 remote_addr.sin_family = AF_INET;
 remote_addr.sin_port = htons ( tport );
 remote_addr.sin_addr = * ( ( struct in_addr * ) host_addr->h_addr );
 if ( ( s = socket ( AF_INET, SOCK_STREAM, 0 ) ) < 0 )
 {
  printf ( "socket failed!\n" );
  exit ( 1 );
 }
 printf ( "--[ connecting to %s:%u...", tip, tport );
 if ( connect ( s, ( struct sockaddr * ) &remote_addr, sizeof ( struct sockaddr ) ) == -1 )
 {
  printf ( "failed!\n" );
  exit ( 1 );
 }
 printf ( "done!\n" );
 bzero ( &in, sizeof ( in ) );
 if ( read ( s, in, sizeof ( in ) ) <= 0 )
 {
  printf ( "read failed!\n" );
  return ( 1 );
 }
 printf ( "\n--[ %s\n", in );
 return ( s );
}
