; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/linux/remote/extr_981.c_connect_to_remote_host.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/linux/remote/extr_981.c_connect_to_remote_host.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sockaddr_in = type { %struct.in_addr, i32, i32 }
%struct.in_addr = type { i32 }
%struct.hostent = type { i64 }
%struct.sockaddr = type { i32 }

@.str = private unnamed_addr constant [21 x i8] c"cannot resolve \22%s\22\0A\00", align 1
@AF_INET = common dso_local global i32 0, align 4
@SOCK_STREAM = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [16 x i8] c"socket failed!\0A\00", align 1
@.str.2 = private unnamed_addr constant [27 x i8] c"--[ connecting to %s:%u...\00", align 1
@.str.3 = private unnamed_addr constant [9 x i8] c"failed!\0A\00", align 1
@.str.4 = private unnamed_addr constant [7 x i8] c"done!\0A\00", align 1
@.str.5 = private unnamed_addr constant [14 x i8] c"read failed!\0A\00", align 1
@.str.6 = private unnamed_addr constant [9 x i8] c"\0A--[ %s\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @connect_to_remote_host(i8* %0, i16 zeroext %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i8*, align 8
  %5 = alloca i16, align 2
  %6 = alloca i32, align 4
  %7 = alloca [1024 x i8], align 16
  %8 = alloca %struct.sockaddr_in, align 4
  %9 = alloca %struct.hostent*, align 8
  store i8* %0, i8** %4, align 8
  store i16 %1, i16* %5, align 2
  %10 = call i32 @memset(%struct.sockaddr_in* %8, i32 0, i32 12)
  %11 = load i8*, i8** %4, align 8
  %12 = call %struct.hostent* @gethostbyname(i8* %11)
  store %struct.hostent* %12, %struct.hostent** %9, align 8
  %13 = icmp eq %struct.hostent* %12, null
  br i1 %13, label %14, label %18

14:                                               ; preds = %2
  %15 = load i8*, i8** %4, align 8
  %16 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([21 x i8], [21 x i8]* @.str, i64 0, i64 0), i8* %15)
  %17 = call i32 @exit(i32 1) #4
  unreachable

18:                                               ; preds = %2
  %19 = load i32, i32* @AF_INET, align 4
  %20 = getelementptr inbounds %struct.sockaddr_in, %struct.sockaddr_in* %8, i32 0, i32 2
  store i32 %19, i32* %20, align 4
  %21 = load i16, i16* %5, align 2
  %22 = call i32 @htons(i16 zeroext %21)
  %23 = getelementptr inbounds %struct.sockaddr_in, %struct.sockaddr_in* %8, i32 0, i32 1
  store i32 %22, i32* %23, align 4
  %24 = getelementptr inbounds %struct.sockaddr_in, %struct.sockaddr_in* %8, i32 0, i32 0
  %25 = load %struct.hostent*, %struct.hostent** %9, align 8
  %26 = getelementptr inbounds %struct.hostent, %struct.hostent* %25, i32 0, i32 0
  %27 = load i64, i64* %26, align 8
  %28 = inttoptr i64 %27 to %struct.in_addr*
  %29 = bitcast %struct.in_addr* %24 to i8*
  %30 = bitcast %struct.in_addr* %28 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 4 %29, i8* align 4 %30, i64 4, i1 false)
  %31 = load i32, i32* @AF_INET, align 4
  %32 = load i32, i32* @SOCK_STREAM, align 4
  %33 = call i32 @socket(i32 %31, i32 %32, i32 0)
  store i32 %33, i32* %6, align 4
  %34 = icmp slt i32 %33, 0
  br i1 %34, label %35, label %38

35:                                               ; preds = %18
  %36 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str.1, i64 0, i64 0))
  %37 = call i32 @exit(i32 1) #4
  unreachable

38:                                               ; preds = %18
  %39 = load i8*, i8** %4, align 8
  %40 = load i16, i16* %5, align 2
  %41 = zext i16 %40 to i32
  %42 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([27 x i8], [27 x i8]* @.str.2, i64 0, i64 0), i8* %39, i32 %41)
  %43 = load i32, i32* %6, align 4
  %44 = bitcast %struct.sockaddr_in* %8 to %struct.sockaddr*
  %45 = call i32 @connect(i32 %43, %struct.sockaddr* %44, i32 4)
  %46 = icmp eq i32 %45, -1
  br i1 %46, label %47, label %50

47:                                               ; preds = %38
  %48 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.3, i64 0, i64 0))
  %49 = call i32 @exit(i32 1) #4
  unreachable

50:                                               ; preds = %38
  %51 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str.4, i64 0, i64 0))
  %52 = bitcast [1024 x i8]* %7 to i8**
  %53 = call i32 @bzero(i8** %52, i32 1024)
  %54 = load i32, i32* %6, align 4
  %55 = getelementptr inbounds [1024 x i8], [1024 x i8]* %7, i64 0, i64 0
  %56 = call i64 @read(i32 %54, i8* %55, i32 1024)
  %57 = icmp sle i64 %56, 0
  br i1 %57, label %58, label %60

58:                                               ; preds = %50
  %59 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str.5, i64 0, i64 0))
  store i32 1, i32* %3, align 4
  br label %64

60:                                               ; preds = %50
  %61 = getelementptr inbounds [1024 x i8], [1024 x i8]* %7, i64 0, i64 0
  %62 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.6, i64 0, i64 0), i8* %61)
  %63 = load i32, i32* %6, align 4
  store i32 %63, i32* %3, align 4
  br label %64

64:                                               ; preds = %60, %58
  %65 = load i32, i32* %3, align 4
  ret i32 %65
}

declare dso_local i32 @memset(%struct.sockaddr_in*, i32, i32) #1

declare dso_local %struct.hostent* @gethostbyname(i8*) #1

declare dso_local i32 @printf(i8*, ...) #1

; Function Attrs: noreturn
declare dso_local i32 @exit(i32) #2

declare dso_local i32 @htons(i16 zeroext) #1

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memcpy.p0i8.p0i8.i64(i8* noalias nocapture writeonly, i8* noalias nocapture readonly, i64, i1 immarg) #3

declare dso_local i32 @socket(i32, i32, i32) #1

declare dso_local i32 @connect(i32, %struct.sockaddr*, i32) #1

declare dso_local i32 @bzero(i8**, i32) #1

declare dso_local i64 @read(i32, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
